rietveld-static: Add contact information to landing page.
Change-Id: I39ecf184961cc82b3d17e77e86d35c8643d77fdd
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2945656
Auto-Submit: Edward Lesmes <ehmaldonado@chromium.org>
Commit-Queue: Josip Sokcevic <sokcevic@google.com>
Reviewed-by: Josip Sokcevic <sokcevic@google.com>
Cr-Commit-Position: refs/heads/master@{#41474}

--- a/go/src/infra/appengine/rietveld-static/default/static/README.html
+++ b/go/src/infra/appengine/rietveld-static/default/static/README.html
@@ -15,6 +15,11 @@
         Current Chromium code reviews can be found on
         <a href="https://chromium-review.googlesource.com/">Chromium Gerrit</a>.
       </p>
+      <p>
+        For any questions or concerns, please file a bug under the
+        <a href="https://bugs.chromium.org/p/chromium/issues/entry?components=Infra%3ESDK">Infra>SDK</a>
+        component.
+      </p>
     </div>
   </body>
 </html>
