som: Add ability to enter buganizer URLs
This change adds the ability to enter buganizer urls on an alert.

BUG=chromium:706098
TEST=make test

Signed-off-by: Raul E Rangel <rrangel@chromium.org>
Change-Id: I3f299fb07d672451400779b64eb43b51392b8c06
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2941327
Reviewed-by: Weiwei Lin <weiweilin@google.com>
Reviewed-by: Na Wei <nawei@chromium.org>
Commit-Queue: Na Wei <nawei@chromium.org>
Cr-Commit-Position: refs/heads/master@{#41669}

--- a/go/src/infra/appengine/sheriff-o-matic/frontend/test/som-annotations-test.html
+++ b/go/src/infra/appengine/sheriff-o-matic/frontend/test/som-annotations-test.html
@@ -514,6 +514,118 @@ See go/bugatrooper for instructions and bug templates
       );
     });
 
+    test('save bug with https://b.corp.google.com', function () {
+      let sendStub = sinon.stub(element, 'sendAnnotation');
+      sendStub.onCall(0).returns({
+        then: (f) => {
+          f({ key: 'foo' });
+        }
+      });
+
+      element.$.bug.value = 'https://b.corp.google.com/issues/12345678';
+      element.$.autosnooze.checked = false;
+      element._fileBugModel = [{ key: 'foo' }];
+
+      element._saveBug();
+
+      sinon.assert.calledOnce(sendStub);
+      sinon.assert.calledWith(
+        sendStub,
+        'foo',
+        'add',
+        {
+          bugs: [{
+            id: '12345678',
+            projectId: 'b',
+          }]
+        }
+      );
+    });
+
+    test('save bug with b.corp.google.com', function () {
+      let sendStub = sinon.stub(element, 'sendAnnotation');
+      sendStub.onCall(0).returns({
+        then: (f) => {
+          f({ key: 'foo' });
+        }
+      });
+
+      element.$.bug.value = 'b.corp.google.com/issues/12345678';
+      element.$.autosnooze.checked = false;
+      element._fileBugModel = [{ key: 'foo' }];
+
+      element._saveBug();
+
+      sinon.assert.calledOnce(sendStub);
+      sinon.assert.calledWith(
+        sendStub,
+        'foo',
+        'add',
+        {
+          bugs: [{
+            id: '12345678',
+            projectId: 'b',
+          }]
+        }
+      );
+    });
+
+    test('save bug with b/', function () {
+      let sendStub = sinon.stub(element, 'sendAnnotation');
+      sendStub.onCall(0).returns({
+        then: (f) => {
+          f({ key: 'foo' });
+        }
+      });
+
+      element.$.bug.value = 'b/12345678';
+      element.$.autosnooze.checked = false;
+      element._fileBugModel = [{ key: 'foo' }];
+
+      element._saveBug();
+
+      sinon.assert.calledOnce(sendStub);
+      sinon.assert.calledWith(
+        sendStub,
+        'foo',
+        'add',
+        {
+          bugs: [{
+            id: '12345678',
+            projectId: 'b',
+          }]
+        }
+      );
+    });
+
+    test('save bug with b:', function () {
+      let sendStub = sinon.stub(element, 'sendAnnotation');
+      sendStub.onCall(0).returns({
+        then: (f) => {
+          f({ key: 'foo' });
+        }
+      });
+
+      element.$.bug.value = 'b:12345678';
+      element.$.autosnooze.checked = false;
+      element._fileBugModel = [{ key: 'foo' }];
+
+      element._saveBug();
+
+      sinon.assert.calledOnce(sendStub);
+      sinon.assert.calledWith(
+        sendStub,
+        'foo',
+        'add',
+        {
+          bugs: [{
+            id: '12345678',
+            projectId: 'b',
+          }]
+        }
+      );
+    });
+
     test('save bug with shorthand', function () {
       let sendStub = sinon.stub(element, 'sendAnnotation');
       sendStub.onCall(0).returns({
