--- a/go/src/infra/appengine/sheriff-o-matic/frontend/elements/som-alert-item/som-alert-item.html
+++ b/go/src/infra/appengine/sheriff-o-matic/frontend/elements/som-alert-item/som-alert-item.html
@@ -237,9 +237,14 @@
           <div id="bugsList" hidden$="[[!_bugs.length]]" class="alert-links">
             <template is="dom-repeat" items="[[_bugs]]" as="bug">
               <div class="bug no-toggle">
-                <a target="_blank" href="https://crbug.com/[[bug.projectId]]/[[bug.id]]">Bug [[bug.id]]</a>
-                [[bug.summary]]
-                <em class="bug-status" hidden$="[[!bug.status]]">([[bug.status]])</em>
+                <template is="dom-if" if="[[!_isBuganizer(bug)]]">
+                  <a target="_blank" href="https://crbug.com/[[bug.projectId]]/[[bug.id]]">Bug [[bug.id]]</a>
+                  [[bug.summary]]
+                  <em class="bug-status" hidden$="[[!bug.status]]">([[bug.status]])</em>
+                </template>
+                <template is="dom-if" if="[[_isBuganizer(bug)}}">
+                  <a target="_blank" href="https://issuetracker.google.com/issues/[[bug.id]]">Bug b/[[bug.id]]</a>
+                </template>
                 <iron-icon icon="close" title="Remove" id="remove[[index]]" on-tap="_removeBug"></iron-icon>
               </div>
             </template>
