--- a/go/src/infra/appengine/sheriff-o-matic/frontend/test/som-alert-item-test.html
+++ b/go/src/infra/appengine/sheriff-o-matic/frontend/test/som-alert-item-test.html
@@ -174,6 +174,20 @@
       });
     });
 
+    test('buganizer bug generates correct link', function(done) {
+      element.annotation = {
+        bugs: [{ id: '1234', projectId: 'b' }],
+        bugData: []
+      };
+
+      flush(function () {
+        assert.lengthOf(element.$.bugsList.querySelectorAll(".bug"), 1);
+        assert.equal('Bug b/1234', element.$.bugsList.querySelector("a").textContent);
+        assert.equal(element.$.bugsList.querySelector("a").href, 'https://issuetracker.google.com/issues/1234');
+        done();
+      });
+    });
+
     test('render useful links', function(done) {
       const chromiumUrl1 = 'https://ci.chromium.org/p/chromium/builders/ci/Linux%20TSan%20Tests';
       const chromiumUrl2 = 'https://ci.chromium.org/p/chromium/builders/ci/linux-trusty-rel';
