Add Blink>WebGPU component to API bug filing for non-edit users
Bug: 1226435
Change-Id: Idff88a88fcf1f10782f873658539a84ee580cff2
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3028788
Commit-Queue: Eric Foo <efoo@chromium.org>
Reviewed-by: Tiffany Zhang <zhangtiff@chromium.org>
Cr-Commit-Position: refs/heads/master@{#42408}

--- a/appengine/chromium_bugs/html/ajah/api.html
+++ b/appengine/chromium_bugs/html/ajah/api.html
@@ -62,6 +62,7 @@
       <option value="Blink>WebCrypto">Blink>WebCrypto</option>
       <option value="Blink>WebFonts">Blink>WebFonts</option>
       <option value="Blink>WebGL">Blink>WebGL</option>
+      <option value="Blink>WebGPU">Blink>WebGPU</option>
       <option value="Blink>WebMIDI">Blink>WebMIDI</option>
       <option value="Blink>WebRTC">Blink>WebRTC</option>
       <option value="Blink>WebShare">Blink>WebShare</option>
